# candle

./: Cargo.toml
candle-core/examples/: metal_deferred_sync.rs
candle-core/src/metal_backend/: device.rs
candle-examples/: Cargo.toml
candle-examples/examples/mnist-light/: main.rs
candle-light/: Cargo.toml
candle-light/src/: config.rs  lib.rs  module.rs  trainer.rs
candle-light/src/callbacks/: checkpoint.rs  early_stopping.rs  mod.rs
candle-light/src/metrics/: mod.rs
candle-light/tests/: trainer_tests.rs
candle-metal-kernels/src/metal/: commands.rs
